css styling complete and animation transition effect added to tile

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <div class="cell"></div>
     <div class="cell"></div>
     <div class="cell"></div>
-    <div class="tile">2</div>
 </div>
 </body>
-<script type="javascript" name="game.js"></script>
+<script type="module" name="game.js"></script>
 </html>
