create Grid and Cell Elements functions

--- a/index.html
+++ b/index.html
@@ -4,27 +4,19 @@
 <head>
     <title>2048 Game</title>
     <link rel="stylesheet" href="style.css">
+    <script>
+        function handleData(data) {
+            console.log(data);
+        }
+    </script>
+    <script src="http://example.com/data-json?callback=handleData"></script>
+    
 </head>
 
+
 <div id="game-board">
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
-    <div class="cell"></div>
+    
 </div>
 </body>
-<script type="module" name="game.js"></script>
+<script src="game.js" type="module"></script>
 </html>
